# sc-standards

./: .gitignore  =0.14.0  =0.27.0  =1.0.0  ACCURACY_IMPROVEMENT_GUIDE.md  CHAT_SYSTEM_README.md  LICENSE  Makefile  PDF_STUDY_ANALYZER_README.md  PROJECT_ORGANIZATION.md  PROPER_ORGANIZATION_GUIDE.md  README.md  USAGE_GUIDE.md  WEAKNESS_ANALYSIS.md  accuracy_test.py  advanced_dialux_processor.py  auto_process.py  batch_pdf_evaluator.py  check_training_readiness.py  comprehensive_dialux_processor.py  debug_detailed.py  debug_processing.py  demo_lighting_evaluation.py  demo_simple_evaluator.py  demo_usage.py  dialux_classifier.py  dialux_classifier_web.py  dialux_pdf_processor.py  flexible_dialux_processor.py  focused_dialux_processor.py  improved_dialux_processor.py  intelligent_dialux_processor.py  main.py  optimized_dialux_processor.py  organization_report.json  organize_files.py  organize_project_properly.py  process.bat  process_standards.py  pyproject.toml  (+15 more)
configs/: env_template
docs/: CONFIRMATION.md  DESIGN_PROJECT_STEPS.md  FINAL_ORGANIZATION.md  GITHUB_SETUP_COMPLETE.md  LATEST_NEWS.md  ORGANIZED_STRUCTURE.md  PROJECT_STRUCTURE.md  README.md  SETUP_COMPLETE.md  SYSTEM_OVERVIEW.md  WORKFLOW_EXPLANATION.md
evaluators/: evaluate_lighting_report.py  quick_batch_evaluator.py  quick_realistic_evaluator.py
examples/: example_usage.py  simple_extraction_test.py  table_extraction_demo.py
processors/: create_sample_processed.py  enhanced_dialux_processor.py
scripts/: add_more_standards_data.py  fix_dependencies.py  improve_accuracy.py  install.py  resolve_dependencies.py  run_accuracy_improvements.py  setup_environment.py  setup_git.py  start_chat_system.py  start_pdf_analyzer.py
src/: __init__.py
src/ai_standards/: __init__.py
src/ai_standards/core/: __init__.py  config.py  pdf_processor.py  simple_pdf_processor.py
src/ai_standards/evaluators/: __init__.py  lighting_report_evaluator.py
src/ai_standards/processing/: enhanced_dialux_extractor.py  improve_standards_extraction.py  process_pdfs.py
src/ai_standards/processors/: __init__.py  dialux_processor.py
src/ai_standards/utils/: __init__.py
src/ai_standards/web/: __init__.py  web_interface.py
structure/: 00_INDEX.txt  00_INDEX_UPDATED.txt  01_PROJECT_OVERVIEW.txt  02_MAIN_ENTRY_POINT.txt  03_CONFIGURATION_SYSTEM.txt  04_PDF_PROCESSING_SYSTEM.txt  05_AI_TRAINING_SYSTEM.txt  06_COMPARISON_MODEL_SYSTEM.txt  07_EVALUATION_SYSTEMS.txt  08_WEB_INTERFACES.txt  09_COMMAND_LINE_INTERFACE.txt  10_LIBRARIES_AND_DEPENDENCIES.txt  11_PROJECT_STRUCTURE.txt  12_FUNCTION_REFERENCE.txt  13_ENHANCED_EXTRACTION_ANALYSIS.txt  14_ENHANCED_EXTRACTION_SYSTEM.txt  15_AI_TRAINING_SYSTEM_DETAILED.txt  16_PROCESSING_SYSTEM_INTEGRATION.txt
tests/: __init__.py  test_chat_api.py  test_installation.py
tools/: analyze_study.py  batch_study_analyzer.py  chat_api.py  chat_web_interface.py  enhanced_chat_api.py  pdf_study_analyzer.py  upload_study_analyzer.py
web/: chat_web.html
